--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@ position:relative;
 	font-size:3em;
 	}
 	</style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145157681-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145157681-1');
+</script>
+
 </head>
 
 <body>
