animacion con bootstrap

--- a/animacion-js.html
+++ b/animacion-js.html
@@ -36,6 +36,8 @@
 	<nav>
 		<a href="index.html">animacion css</a>
 		<a href="animacion-js.html">animacion js</a>
+        <a href=" https://canodelacuadra.github.io/diapositivas-css-js/">Diapositivas hechas con bootstrap</a>
+       
 		<a href="https://canodelacuadra.github.io/paresynones/">Pares o Nones</a>
 	</nav>
  <div class="box" id="animatedBox"></div>
