--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@ position:relative;
 	<nav>
 		<a href="index.html">animacion css</a>
 		<a href="animacion-js.html">animacion js</a>
+        <a href=" https://canodelacuadra.github.io/diapositivas-css-js/">Diapositivas hechas con bootstrap</a>
+       
 		<a href="https://canodelacuadra.github.io/paresynones/">Pares o Nones</a>
-		
 	</nav>
 <div  id="lienzo">
 	<p id='movido'>Hola soy el gato felix</p>
