animacion svg y animacion canvas

--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ position:relative;
 	<nav>
 		<a href="index.html">animacion css</a>
 		<a href="animacion-js.html">animacion js</a>
+		<a href="animacion-svg.html">animacion svg</a>
+		<a href="canvas.html">animacion canvas</a>
         <a href=" https://canodelacuadra.github.io/diapositivas-css-js/">Diapositivas hechas con bootstrap</a>
        
 		<a href="https://canodelacuadra.github.io/paresynones/">Pares o Nones</a>
