--- a/canvas.html
+++ b/canvas.html
@@ -5,12 +5,22 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Animación en Canvas</title>
 <style>
+    body{
+			font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+		}
+		h1,nav{
+			text-align: center;
+		}
+		nav{
+			margin-bottom: 1em;
+		}
   canvas {
     border: 1px solid black;
   }
 </style>
 </head>
 <body>
+    	<h1>Animaciones en Canvas </h1>
     	<nav>
 		<a href="index.html">animacion css</a>
 		<a href="animacion-js.html">animacion js</a>
