--- a/animacion-svg.html
+++ b/animacion-svg.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+			font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+		}
+		h1,nav{
+			text-align: center;
+		}
+		nav{
+			margin-bottom: 1em;
+		}
           .circle {
     fill: blue;
     transition: fill 0.5s, r 1s;
@@ -18,6 +27,7 @@
 
 </head>
 <body>
+    	<h1>Animaciones en SVG </h1>
     	<nav>
 		<a href="index.html">animacion css</a>
 		<a href="animacion-js.html">animacion js</a>
